[package]
name = "nem2"
version = "0.1.0"
authors = ["Hideo Hattori <hhatto.jp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.0"
ureq = { version = "0.11.2", features = ["json"] }
serde_json = "1"
hex = "0.4"
num = "*"
time = "0.2.6"
